# Video-master

./: PROJECT_HANDOVER.md  README.md  SUBTITLE_FEATURE_IMPLEMENTATION.md  WINDOWS_WHITE_SCREEN_FIX.md  analyze_dart.txt  analyze_full.txt  analyze_machine.txt  audio_player_implementation.md  fix_flutter_path.ps1  pubspec.yaml  test_windows_fix.ps1  安装指导.md
.github/workflows/: ios_build_unsigned.yml  macos_build.yml
.kiro/steering/: rules.md
android/: build.gradle  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
ios/: Podfile  ffmpeg-kit-ios-min-gpl.podspec
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: bilibili_download_task.dart  bilibili_models.dart  subtitle_model.dart  subtitle_style.dart  video_collection.dart  video_item.dart
lib/screens/: batch_import_screen.dart  bilibili_download_screen.dart  collection_screen.dart  home_screen.dart  portrait_video_screen.dart  recycle_bin_screen.dart  simple_video_player_screen.dart  simple_video_preview_screen.dart  subtitle_preview_screen.dart  (+1 more)
linux/: CMakeLists.txt
macos/: Podfile
test/: subtitle_parser_test.dart  thumbnail_cache_eviction_property_test.dart  thumbnail_cache_service_property_test.dart  thumbnail_deletion_sync_property_test.dart  thumbnail_preload_manager_property_test.dart  video_player_compatibility_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/subtitle_controller_plugin/: CMakeLists.txt  subtitle_controller_plugin.cc  subtitle_controller_plugin.h
(+71 files in other folders)
